[package]
name = "jwt-cli"
description = "A super fast CLI tool to decode and encode JWTs built in Rust"
version = "4.0.0"
authors = ["Mike Engel <mike@mike-engel.com>", "Corey McGregor <https://github.com/shousper>", "Aaron Schaef <https://github.com/atschaef>", "Hugh Simpson <https://github.com/hughsimpson>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "jwt"
path = "src/main.rs"
test = true

[dependencies]
clap = "2"
jsonwebtoken = "7"
term-painter = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
parse_duration = "2.1.1"
atty = "0.2"
